--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,9 +16,10 @@ on:
 
 jobs:
   build:
-
+    permissions:
+      contents: read
+      security-events: write
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v4
     - name: Set up JDK 21
