--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,6 +17,9 @@ on:
 jobs:
   build:
 
+    permissions:
+      contents: read
+      security-events: write
     runs-on: ubuntu-latest
 
     steps:
